--- a/autores/src/main/resources/application.properties
+++ b/autores/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=autores
+server.port=9001
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/servicio_autor?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
